# rust-tauri-nextjs-template

./: .editorconfig  .lintstagedrc.mjs  .pre-commit-config.yaml  Makefile  README.md  eslint.config.mjs  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: ci.yml
scripts/: prefix.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/manager/: app_handle.rs
src-tauri/src/utils/: window.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: header.tsx  nav.tsx  task-list.tsx  task.tsx  type.ts  win-display-controller.tsx
src/components/ui/: button.tsx  index.ts  input.tsx  popover.tsx  scroll-area.tsx
src/lib/: feign-desktop.ts  providers.tsx
src/store/: index.ts  task.spec.ts  task.ts
src/utils/: math.spec.ts
