[package]
name = "rust-tauri-nextjs-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_tauri_nextjs_template_lib"
crate-type = ["lib", "cdylib", "staticlib"]
[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.37.0", features = ["tokio-macros", "macros"] }
