[package]
name = "rust-tauri-nextjs-template"
version = "0.1.0"
description = "A Tauri App template with NextJS"
authors = ["Clover You"]
edition = "2024"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_tauri_nextjs_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.1", features = [] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.47.1", features = ["tokio-macros", "macros"] }
anyhow = "1.0.99"
tauri-utils = "2.7.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
